website title update

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;700&family=Public+Sans&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+  <title>Portfolio template</title>
 </head>
 
 <body>
